syntax = "proto3";
package walletpb;

message WalletConfig{
    string filePath = 1;
}
